--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,7 @@
-
+*{
+  margin: 0px;
+  padding: 0px;
+}
 
 
 body {
@@ -38,6 +41,9 @@ video::-webkit-media-controls {
   }
 header {
   box-sizing: border-box;
+}
+p { 
+  color: rgb(189, 180, 170);
 }
 
 
