--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -37,7 +37,7 @@ header {
   box-sizing: border-box;
 }
 p { 
-  color: white; important:  !important;
+  color: white;
 }
 h2 {	
   margin-top: 3px;
