--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,48 +1,37 @@
+$bg-c: black;
+$tx_st: 'Inknut Antiqua', serif;
 
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap');
 
 body {
-    background-color: black;
-    font-family: 'Inknut Antiqua', serif;
-    max-width: 1600px;  
+  background-color:$bg-c;
+  font-family: $tx_st;
+  max-width: 1600px;  
 }
 video::-webkit-media-controls {
-    display: none;
-  }
+  display: none;
+}
 .video-hero {
-  background: tomato;
-  width: 100%;
-  height: 95vh;
-  object-fit: cover;
-  }
+background:$bg-c;
+width: 100%;
+height: 95vh;
+margin: 2px 2px;
+object-fit: cover;
+}
 .video-hero__cortinilla {
-    background: rgba(0,0,0,0.7);
-    height: 100vh;
-    position: absolute;
-    margin: auto;
-    width: 100%;
-    top: 0;
-  }
-  #contactus {
-    margin: auto;
-    
-  }
-
-  img#dibujos {
-    margin: auto;
-    margin: 12px;
-    max-width: 250px;
-  }
+  background: rgba(0,0,0,0.7);
+  height: 100vh;
+  position: absolute;
+  margin: 2px 2px;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+img#dibujos {
+  margin: auto;
+  margin: 12px;
+  max-width: 250px;
+}
 header {
   box-sizing: border-box;
 }
-p { 
-  color: white;
-}
-h2 {	
-  margin-top: 3px;
-  }
-
-
-
-
