aplica mas scss

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,4 @@
-$bg-c: black;
-$tx_st: 'Inknut Antiqua', serif;
-
+@import "variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap');
 
 body {
