--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,7 +4,7 @@
 body {
   background-color:$bg-c;
   font-family: $tx_st;
-  max-width: 1600px;  
+  max-width: 100vw;  
 }
 video::-webkit-media-controls {
   display: none;
@@ -25,11 +25,43 @@ object-fit: cover;
   top: 0;
   left: 0;
 }
-img#dibujos {
+img  {
   margin: auto;
   margin: 12px;
-  max-width: 250px;
+  max-width: 25vw;
+}
+.dibujos {
+  max-width: 25vw;
+  margin: auto;
+  margin: 12px;
+
 }
 header {
   box-sizing: border-box;
 }
+@media only screen and (min-width: 1200px){
+  h1 {
+  font-size: 3vw;
+  }
+  h2 {
+  font-size: 2vw;
+  }
+  h3 {
+  font-size: 1vw;
+  }
+  p {
+  font-size: 1vw;
+  }}
+@media only screen and (max-width: 800px){
+  h1 {
+  font-size: 4vw;
+  }
+  h2 {
+  font-size: 3vw;
+  }
+  h3 {
+  font-size: 2vw;
+  }
+  p {
+  font-size: 2vw;
+  }}
