--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -52,16 +52,7 @@ header {
   p {
   font-size: 1vw;
   }}
-@media only screen and (max-width: 800px){
-  h1 {
-  font-size: 4vw;
-  }
-  h2 {
-  font-size: 3vw;
-  }
-  h3 {
-  font-size: 2vw;
-  }
-  p {
-  font-size: 2vw;
+  @media only screen and (max-width: 1000px){
+  .dibujos img {
+   max-width: 35vw;
   }}
