--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,10 +1,13 @@
 @import "variables.scss";
+@import "colores.scss";
+@import "medias.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap');
 
 body {
   background-color:$bg-c;
   font-family: $tx_st;
-  max-width: 100vw;  
+  margin: auto;
+  max-width: 1600px;  
 }
 video::-webkit-media-controls {
   display: none;
@@ -31,7 +34,7 @@ img  {
   max-width: 25vw;
 }
 .dibujos {
-  max-width: 25vw;
+  max-width: 40vw;
   margin: auto;
   margin: 12px;
 
@@ -39,20 +42,3 @@ img  {
 header {
   box-sizing: border-box;
 }
-@media only screen and (min-width: 1200px){
-  h1 {
-  font-size: 3vw;
-  }
-  h2 {
-  font-size: 2vw;
-  }
-  h3 {
-  font-size: 1vw;
-  }
-  p {
-  font-size: 1vw;
-  }}
-  @media only screen and (max-width: 1000px){
-  .dibujos img {
-   max-width: 35vw;
-  }}
