--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap");
-h1, h2, h3, h4, h5, h6, p, span {
+h1, h2, h3, h4, h5, h6, p {
   color: rgba(192, 192, 192, 0.877); }
 
-@media only screen and (min-width: 2000px) {
+@media only screen and (min-width: 1024px) {
   h1 {
     font-size: 2vw; }
   h2 {
-    font-size: 1vw; }
+    font-size: 1.5vw; }
   h3 {
-    font-size: 1vw; }
+    font-size: 1.5vw; }
+  span {
+    font-size: 1.5vw; }
+  label {
+    font-size: 1.5vw; }
   p {
-    font-size: 1vw; } }
+    font-size: 1.5vw; } }
+
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  h1 {
+    font-size: 20px; }
+  h2 {
+    font-size: 20px; }
+  h3 {
+    font-size: 20px; }
+  span {
+    font-size: 20px; }
+  label {
+    font-size: 20px; }
+  p {
+    font-size: 20px; }
+  .dibujos {
+    max-width: 30vw !important; } }
+
+@media only screen and (min-width: 100px) and (max-width: 479px) {
+  h1 {
+    font-size: 15px; }
+  h2 {
+    font-size: 15px; }
+  h3 {
+    font-size: 15px; }
+  span {
+    font-size: 15px; }
+  label {
+    font-size: 15px; }
+  p {
+    font-size: 15px; }
+  .dibujos {
+    max-width: 43vw !important; } }
 
 body {
   background-color: black;
@@ -37,15 +73,9 @@ video::-webkit-media-controls {
   top: 0;
   left: 0; }
 
-img {
-  margin: auto;
-  margin: 12px;
-  max-width: 25vw; }
-
 .dibujos {
-  max-width: 40vw;
-  margin: auto;
-  margin: 12px; }
+  margin: 30px;
+  max-width: 25vw; }
 
 header {
   box-sizing: border-box; }
