--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -1,17 +1,64 @@
-@media only screen and (min-width: 2000px){
+@media only screen and (min-width: 1024px){
     h1 {
     font-size: 2vw;
-    
     }
     h2 {
-    font-size: 1vw;
-    
+    font-size: 1.5vw;
     }
     h3 {
-    font-size: 1vw;
-    
+    font-size: 1.5vw;
+    }
+    span{
+    font-size: 1.5vw; 
+    }
+    label{
+    font-size: 1.5vw;    
     }
     p {
-    font-size: 1vw;
-    
+    font-size: 1.5vw; 
   }}
+  @media only screen and (min-width: 480px)and(max-width: 768px){
+    h1 {
+    font-size: 20px;
+    }
+    h2 {
+    font-size: 20px;
+    }
+    h3 {
+    font-size: 20px;
+    }
+    span{
+    font-size:20px; 
+    }
+    label{
+    font-size: 20px;    
+    }
+    p {
+    font-size: 20px; }
+    .dibujos{
+    max-width: 30vw !important;
+    }}
+  @media only screen and (min-width: 100px)and(max-width: 479px){
+    h1 {
+    font-size: 15px;
+    }
+    h2 {
+    font-size: 15px;
+    }
+    h3 {
+    font-size: 15px;
+    }
+    span{
+    font-size:15px; 
+    }
+    label{
+    font-size: 15px;    
+    }
+    p {
+    font-size: 15px; 
+    }
+    .dibujos{
+    max-width: 43vw !important;
+
+    }
+  }
